--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 
     <div class="video-column">
       <div class="video-preview">
+        <a href="https://softflow101.github.io/soft.youtubeclone/exercises.html">
+          link
+        </a>
         <div class="div-thumbnail-1">
           <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
             <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp">
