--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
 
     <div class="video-column">
       <div class="video-preview">
-        <a href="https://softflow101.github.io/soft.youtubeclone/exercises.html">
+        <a href="https://softflow101.github.io/soft.youtubeclone/exercises.html" target="blank">
           link
         </a>
         <div class="div-thumbnail-1">
-          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="blank">
             <img class="thumbnail-1" src="thumbnails/thumbnail-1.webp">
           </a>
           <div class="time-div">14:20</div>
         </div>
         <div class="video-info-grid">
           <div class="profile-div">
-            <a class="channel-link" href="https://www.youtube.com/c/mkbhd">
+            <a class="channel-link" href="https://www.youtube.com/c/mkbhd" target="blank">
               <img class="profile-pic" src="channel-pictures/channel-1.jpeg">
             </a>
           </div>
           <div class="video-info">
             <div class="video-title">
               <p class="talking-paragraph">
-                <a class="video-link" href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+                <a class="video-link" href="https://www.youtube.com/watch?v=n2RNcPRtAiY" target="blank">
                   Talking Tech and AI with Google CEO Sundar Pichai!
                 </a>
               </p>
